--- a/sidebar.css
+++ b/sidebar.css
@@ -1,13 +1,13 @@
 body{
     background-color: rgb(220, 199, 244);
-   
+
 }
 .conatiner{
     height: 80vh;
     display: flex;
 }
 .sidebar{
-    height: 85vh;
+    height: 150vh;
     width:190px;
     border: solid 2px goldenrod;
     background-color: rgb(190, 176, 239);
@@ -25,7 +25,11 @@ img{
     align-items: center;
     cursor: pointer;
     color: rgb(201, 78, 30);
+    text-decoration: none;
 }
 .menu-item:hover{
     background-color: rgb(253, 230, 245);
+}
+.active-menu{
+    background-color:  rgb(253, 230, 245);;
 }
