--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -40,13 +40,18 @@ img{
     padding: 30px;
     text-shadow: rgb(197, 159, 63) 3px 0 0 ;
 }
-.bottom-navigatonbar{
+.bottom-navigationbar{
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 30px;
+    height: 40px;
     background-color:rgb(231, 108, 165);
     color: rgb(142, 29, 9);
     display: none;
+}
+.bottom-menu-icon{
+    margin: 5px;
+    height: 40px;
+    padding-left: 20px;
 }
