--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -55,3 +55,84 @@ img{
     height: 40px;
     padding-left: 20px;
 }
+@media screen and (max-width: 600px){
+            
+    .container {
+        flex-direction: column;
+    }
+    .sidebar {
+        display: none;
+        height: auto;
+        width: 100%;
+        border-radius: 0;
+    }
+    .menu-item {
+        justify-content: center;
+        margin: 10px 0;
+    }
+    .content {
+        padding: 10px;
+        text-align: center;
+    }
+    .bottom-navigationbar {
+        display: flex;
+        justify-content: space-around;
+    }
+    .bottom-menu-icon {
+        padding-left: 0;
+        height: 35px;
+    }
+}
+        /* Tablet Devies*/
+        @media screen and (min-width: 601px) and (max-width: 768px) {
+    .container {
+        flex-direction: row;
+    }
+    .sidebar {
+        height: 100vh;
+        width: 150px;
+        border-radius: 20px;
+    }
+    .menu-item {
+        margin: 10px 0;
+        justify-content: flex-start;
+    }
+    .content {
+        padding: 20px;
+        text-align: left;
+    }
+    .bottom-navigationbar {
+        display: none;
+    }
+    .bottom-menu-icon {
+        padding-left: 10px;
+        height: 40px;
+    }
+}
+
+        /* Large Devies*/
+        @media screen and (min-width: 769px) and (max-width: 992px) {
+    .container {
+        flex-direction: row;
+    }
+    .sidebar {
+        height: 100vh;
+        width: 180px;
+        border-radius: 25px;
+    }
+    .menu-item {
+        margin: 8px 0;
+        justify-content: flex-start;
+    }
+    .content {
+        padding: 25px;
+        text-align: left;
+    }
+    .bottom-navigationbar {
+        display: none;
+    }
+    .bottom-menu-icon {
+        padding-left: 15px;
+        height: 40px;
+    }
+}
